# delegation

./: Cargo.toml  README.md  _paper_plots.ipynb
csv_dir/: 10_iod_vc_issuance.csv  10_iod_vp_issuance.csv  10_iod_vp_jwt_length.csv  10_iod_vp_verification.csv  1_iod_vc_issuance.csv  1_iod_vp_issuance.csv  1_iod_vp_jwt_length.csv  1_iod_vp_verification.csv  4_iod_vc_issuance.csv  4_iod_vp_issuance.csv  4_iod_vp_jwt_length.csv  4_iod_vp_verification.csv  7_iod_vc_issuance.csv  7_iod_vp_issuance.csv  7_iod_vp_jwt_length.csv  7_iod_vp_verification.csv  iop_vc_issuance.csv  iop_vp_issuance.csv  iop_vp_jwt_length.csv  iop_vp_verification.csv  rp_vc_issuance.csv  rp_vp_issuance.csv  rp_vp_jwt_length.csv  rp_vp_verification.csv
src/: benchmark.rs  csv_writer.rs  lib.rs  main.rs
src/delegation/: mod.rs
src/delegation/accumulators/: accumulator_manager.rs  accumulator_utils.rs  accumulator_verifier.rs  in_memory_state.rs  mod.rs
src/delegation/credentials/: mod.rs  verifiable_credential.rs  verifiable_presentation.rs
src/delegation/credentials/ours/: mod.rs  our_delegation.rs  our_delegation_credential.rs  our_delegator.rs
src/delegation/credentials/pjv/: mod.rs  pjv_delegation_credential.rs  pjv_delegator.rs  pjv_signature.rs
src/delegation/entities/: dtl_sim.rs  mod.rs  verifier.rs
src/delegation/entities/ours/: dlt_acc_entry.rs  mod.rs  our_issuer.rs  our_verifier.rs
src/delegation/entities/pjv/: mod.rs  pjv_issuer_verifier.rs
src/delegation/traits/: credential.rs
src/delegation/utils/: utils.rs
