[package]
name = "delegation"
version = "0.1.0"
edition = "2024"

[dependencies]
josekit = "0.8.7"
serde = { version = "1.0.210", default-features = false }
serde_json = { version = "1.0.128", default-features = false }
rand = "0.9.0-alpha.2"
multibase = "0.9.1"
digest = "0.10.6"
sha2 = "0.10.6"
csv = "1.3.1"

ark-ec = "0.4.2"
ark-bn254 = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
vb_accumulator = { version = "0.26.0", default-features = false }

ed25519-dalek = "2.0.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
